--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   go_router: ^7.0.0
   image_picker: ^0.8.7+5
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
