--- a/server/docker-compose-dev.yaml
+++ b/server/docker-compose-dev.yaml
@@ -12,7 +12,7 @@ services:
   ecoapp_server:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
       - .:/app
     ports:
